# SimpleChat

./: .gitignore  CMakeLists.txt  README.md  Readme.txt  TESTING.txt  demo_gui.scpt  demo_test.sh  run_ring.sh
backup_old/: CMakeLists.txt
backup_old/src/: ChatWindow.cpp  ChatWindow.h  Injector.cpp
backup_old/tests/: CMakeLists.txt  test_message.cpp  test_vectorclock.cpp
scripts/: launch_instance.sh  run_many.sh
simplechat2/src/: ChatNode.cpp  ChatNode.h  UiWindow.h  main.cpp
src/: ChatNode.cpp  Message.cpp  Message.h  PeerDirectory.cpp  PeerDirectory.h  Protocol.cpp  Protocol.h  RingNode.cpp  RingNode.h  UiWindow.cpp  UiWindow.h  VectorClock.h  main.cpp
tests/: CMakeLists.txt
